project updated - focus on categorical relationships

--- a/notebooks/01_clean_and_univariate_data_analysis.ipynb
+++ b/notebooks/01_clean_and_univariate_data_analysis.ipynb
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'viztools' from '/Users/jaimeinchaurraga/Documents/GitHub/03_EDA_Superstore/scripts/viztools.py'>"
+       "<module 'viztools' from '/Users/jaimeinchaurraga/Documents/GitHub/03_EDA_Superstore_23/scripts/viztools.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
     "|-------------------------|-----------------------------------------------------|------------------------|-------------------------|---------------------------------------------------------------------------|\n",
     "| Category                | Categoría del producto                               | Categórica             | Alta                    | Identifica el tipo de producto.                                           |\n",
     "| City                    | Ciudad donde se realizó el pedido                    | Categórica             | Media                   | Puede influir en patrones de compra.                                      |\n",
-    "| Country/Region          | País o región donde se realizó el pedido             | Categórica             | Alta                    | Segmentación por ubicación.                                               |\n",
+    "| Country/Region          | País o región donde se realizó el pedido             | Categórica             | Muy Baja                   | Sólo hay un país, no aporta valor                                               |\n",
     "| Customer ID             | Identificador único del cliente                      | Categórica             | Muy baja                | No es útil para el análisis.                                              |\n",
     "| Customer Name           | Nombre del cliente                                   | Categórica             | Muy baja                | No es útil para el análisis.                                              |\n",
     "| Order Date              | Fecha del pedido                                     | Categórica             | Alta                    | Crucial para análisis de tiempo.                                          |\n",
@@ -625,7 +625,7 @@
    "outputs": [],
    "source": [
     "# Eliminar columnas\n",
-    "df = df.drop(['Customer ID','Order ID','Postal Code','Product ID','Row ID'], axis = 1)\n",
+    "df = df.drop(['Customer ID','Order ID','Postal Code','Product ID','Row ID',\"Country/Region\"], axis = 1)\n",
     "\n",
     "# Convertir las columnas de fecha con el formato correcto\n",
     "df['Order Date'] = pd.to_datetime(df['Order Date'], format=\"%d/%m/%Y\", errors='coerce')\n",
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
