--- a/notebooks/01_cleaning_and_univariate_analysis.ipynb
+++ b/notebooks/01_cleaning_and_univariate_analysis.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "max      14.000000  22638.000000    33903.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,6 +1009,138 @@
    ],
    "source": [
     "v.plot_histograms_huge_data(df, [\"Sales\",\"Profit\"], limit=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    9994.000000\n",
+       "mean       28.651891\n",
+       "std       234.255712\n",
+       "min     -6600.000000\n",
+       "25%         2.000000\n",
+       "50%         9.000000\n",
+       "75%        29.000000\n",
+       "max      8400.000000\n",
+       "Name: Profit, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Profit.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Order Profitable?</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Ship Date</th>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>Ship Status</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Sub-Category</th>\n",
+       "      <th>Days to Ship Actual</th>\n",
+       "      <th>Days to Ship Scheduled</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Sales Forecast</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6826</th>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Lafayette</td>\n",
+       "      <td>Tamara Chand</td>\n",
+       "      <td>2021-10-02</td>\n",
+       "      <td>Profitable</td>\n",
+       "      <td>Canon imageCLASS 2200 Advanced Copier</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Corporate</td>\n",
+       "      <td>2021-10-09</td>\n",
+       "      <td>Standard Class</td>\n",
+       "      <td>Shipped Late</td>\n",
+       "      <td>Indiana</td>\n",
+       "      <td>Copiers</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8400</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17500</td>\n",
+       "      <td>26208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Category       City Customer Name Order Date Order Profitable?  \\\n",
+       "6826  Technology  Lafayette  Tamara Chand 2021-10-02        Profitable   \n",
+       "\n",
+       "                               Product Name   Region    Segment  Ship Date  \\\n",
+       "6826  Canon imageCLASS 2200 Advanced Copier  Central  Corporate 2021-10-09   \n",
+       "\n",
+       "           Ship Mode   Ship Status    State Sub-Category  Days to Ship Actual  \\\n",
+       "6826  Standard Class  Shipped Late  Indiana      Copiers                    7   \n",
+       "\n",
+       "      Days to Ship Scheduled  Discount  Profit  Quantity  Sales  \\\n",
+       "6826                       6       0.0    8400         5  17500   \n",
+       "\n",
+       "      Sales Forecast  \n",
+       "6826           26208  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_with_profit_8400 = df[df['Profit'] == 8400.000000]\n",
+    "\n",
+    "row_with_profit_8400"
    ]
   },
   {
@@ -1362,7 +1494,8 @@
     "- Como comentario a tener en cuenta, resalta el rango tan estrecho tanto de programación como de duración real a la hora de realizar tantos envíos de productos. Resulta ciertamente curioso que no se encuentre  \n",
     "registrado ningún caso de problemas de envíos (extraviados, paquetes equivocados, etc) Sería útil realizar un doble check con el departamento de logística para que confirme que estas cifras son reales.  \n",
     "Posteriormente, cuando se realice el análsis bivariante, se utilizará alguna herramienta para visualizar la co-relación entre estas variantes, incluso incluyendo alguna otra que pueda resultar interesante.  \n",
-    "Por ejemplo, decubrir en qué zonas o con qué productos los envíos son más rápidos/lentos y en qué casos existen mas diferencias entre la programación y el resultado real."
+    "Por ejemplo, decubrir en qué zonas o con qué productos los envíos son más rápidos/lentos y en qué casos existen mas diferencias entre la programación y el resultado real.  \n",
+    "- Tener en cuenta los retrasos: Su límite establecido es un máximo de 6 días pero hay ciertos pedidos que han tardado 7. Aunque en términos generales está bien, tratar de ver si existe algún patrón de aquellos pedidos que se retrasan."
    ]
   },
   {
@@ -1626,97 +1759,6 @@
    "source": [
     "df.to_csv('../data/superstore_clean.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
